# chimera-bisque

./: .cruft.json  README.md  README.rst  pyproject.toml  setup.py
chimera_bisque/instruments/: ccdsoftcamera.py  theskytelescope.py  theskyxdriver.py  theskyxtelescope.py
src/chimera_bisque/instruments/: ccdsoftcamera.py  theskytelescope.py  theskyxautoguider.py  theskyxautoguiderdriver.py  theskyxdriver.py  theskyxtelescope.py
tests/: conftest.py  test_drivers_import.py  test_theskyx_live.py  test_theskyxautoguider.py  test_theskyxautoguider_live.py  test_theskyxdriver.py  test_theskyxtelescope.py  test_theskyxtelescope_live.py
